--- a/generic_4.html
+++ b/generic_4.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>취미#2</title>
+		<title>취미#3</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,8 +43,8 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Hobby[2]-#Travel</h1>
-										<h2>#취미#여행#이집트
+										<h1>Hobby[3]-#Travel</h1>
+										<h2>#취미#여행#이집트</h2>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<p>대학을 오면서 학업과 시간에서 어느정도 자유로워지며 새롭게 갖게 된 취미가 '여행'입니다. 성격상 집에만 있어도 행복하게 살 수 있는 집돌이이지만 한 친구를 따라 다녀온 한 여행 덕분에 여행이라는 것을 즐길 수 있게 되었습니다. 여행은 준비해야 할 것도 많고 계획도 필요하고 막상 가면 계획대로 진행되지도 않아 그러한 점이 상당히 귀찮고 지치게 만듭니다. 하지만 여행은 항상 재밌든 힘들든 새로운 경험을 만들 수 있어 여행을 멈출 수 없는 것 같습니다.</p>
@@ -57,6 +57,12 @@
 
 
 			</div>
+			<footer>
+				<ul class="actions">
+					<li><a href="generic_3.html" class="button"> << Last page!</a></li> <li><a href="index.html" class="button">Home!</a></li>
+				</ul>
+		</footer>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
