--- a/landing.html
+++ b/landing.html
@@ -30,9 +30,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="generic_1.html">My Introduction</a></li>
-							<li><a href="generic_2.html">My Goal</a></li>
-							<li><a href="generic_3.html">My Hobby-1</a></li>
-							<li><a href="generic_4.html">My Hobby-2</a></li>
+							<li><a href="generic_2.html">My Hobby-1</a></li>
+							<li><a href="generic_3.html">My Hobby-2</a></li>
+							<li><a href="generic_4.html">My Hobby-3</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="index.html" class="button primary fit">Back to Home</a></li>
@@ -101,10 +101,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Park's dream</h3>
+												<h3>Park's hobby[1]</h3>
 											</header>
-											<p>다음으로, 저의 꿈꾸는 삶을 소개하겠습니다!<br>
-												Next, let me introduce my dream life!
+											<p>다음으로, 저의 첫 번째 취미에 대해 소개하겠습니다!<br>
+												Next, et me introduce my first hobby!
 											</p>
 											<ul class="actions">
 												<li><a href="generic_2.html" class="button">Follow me</a></li>
@@ -119,10 +119,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Park's hobby[1]</h3>
+												<h3>Park's hobby[2]</h3>
 											</header>
-											<p>그 다음으로, 저의 첫 번째 취미에 대해 소개하겠습니다!<br>
-												Then, let me introduce my first hobby!
+											<p>그 다음으로, 저의 두 번째 취미에 대해 소개하겠습니다!<br>
+												Then, let me introduce my second hobby!
 											</p>
 											<ul class="actions">
 												<li><a href="generic_3.html" class="button">Follow me</a></li>
@@ -137,10 +137,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Park's hobby[2]</h3>
+												<h3>Park's hobby[3]</h3>
 											</header>
-											<p>마지막으로, 저의 두 번째 취미에 대해 소개하겠습니다!<br>
-												Lastly, let me introdue my second hobby!
+											<p>마지막으로, 저의 세 번째 취미에 대해 소개하겠습니다!<br>
+												Lastly, let me introdue my third hobby!
 											</p>
 											<ul class="actions">
 												<li><a href="generic_4.html" class="button">Follow me</a></li>
@@ -154,35 +154,36 @@
 					</div>
 
 				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
-						</div>
+				<section id="contact">
+					<section class="split">
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-envelope"></span>
+								<h3>Email</h3>
+								<a href="#">hspark1434@gmail.com</a>
+							</div>
+						</section>
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-phone"></span>
+								<h3>Phone</h3>
+								<span>010-8335-1434</span>
+							</div>
+						</section>
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-home"></span>
+								<h3>Address</h3>
+								<span>대한민국 경상남도 진주시
+								새평거로 75 <br/>
+								or 남명학사
+							</span>
+							</div>
+						</section>
 					</section>
+				</div>
+			</section>
+
 			</div>
 
 		<!-- Scripts -->
