--- a/generic_1.html
+++ b/generic_1.html
@@ -45,17 +45,40 @@
 									<header class="major">
 										<h1>소개(Introduction)</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>안녕하세요! 제 이름은 박형수입니다. 제 나이는 04년생으로 현재 만 20세입니다. 전 경상남도 진주시에서 태어났습니다. 저는 진주에서 자랐고, 그곳에서 초, 중, 고를 모두 나왔습니다. 중앙대학교에 입학하게 되어 진주를 떠나 현재 서울에 상경하여 지내고 있습니다. 현재 머물고 있는 곳은 학교랑 멀리 떨어진 남명학사라는 곳이고, 학교로 매일 통학하며 지내고 있습니다.</p>
-									<p>제 mbti는 istp입니다. 상당히</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-								</div>
+									<article class="image-gallery">
+										<section>
+										<img src="images/IMG_0318.jpeg" alt="" style="width: 80%; max-width: 500px; height: auto;"/>
+										</section>
+											<aside>
+										<p>
+											<strong style="font-size: 1.2em;">안녕하세요! 저는 23학번 산업보안학과 박형수입니다!</strong> <br><br><br>
+											<strong style="font-size: 1.1em;">출생지</strong> : 경상남도 진주시 <br>
+											<strong style="font-size: 1.1em;">현 주거지</strong> : 남명학사(서울시 강남구 자곡동)<br>
+											<strong style="font-size: 1.1em;">학력</strong> : 서진초등학교(졸업) - 진주중학교(졸업) - 진주고등학교(졸업) - 중앙대학교(재학) <br>
+											<strong style="font-size: 1.1em;">MBTI</strong> : istp => <a href="https://www.16personalities.com/ko/%EA%B2%B0%EA%B3%BC/istp-t/x/sqjj2qtw3?utm_source=results-turbulent-virtuoso&utm_medium=email&utm_campaign=ko&utm_content=view-results"> "wanna know more?"</a><br>
+											<strong style="font-size: 1.1em;">특징</strong> : 집돌이, 차갑게 생겼지만 웃음은 헤프다, 뭐든 시작하면 쉽게 질림. <br>
+											<strong style="font-size: 1.1em;">좋아하는 것</strong> : 무한도전(인생예능, 밥친구), 드라마(주로 로코, 코미디 선호) <br>
+											<strong style="font-size: 1.1em;">삶의 좌우명</strong> : 내가 싫은 짓은 남한테 하지 말자., 최소한만 후회하자. <br>
+											<strong style="font-size: 1.1em;">삶의 목표</strong> : 꿈은 딱히 없음. 돈 많은 백수면 좋겠지만, 큰 목표도 없음.<br>
+											<strong style="font-size: 1.1em;">최우선 목표</strong> : 마냥 흘러가는 대로 살지 않고, 내가 진정 하고 싶은 일을 찾는 것 
+										</p>
+										</aside>
+									</article>
+									<article>
+										<section><img src="images/IMG_1400.jpg" alt="" style="width: 28%; max-width: 500px; height: auto; float: right; margin-left: 20px;"/>
+										</section>
+										</article>
 							</section>
 
 					</div>
+					</div>
 
-
-			</div>
+					<footer><br><br><br><br><br><br><br><br>
+						<ul class="actions">
+							<li><a href="landing.html" class="button"> << Back...!</a></li> <li><a href="generic_2.html" class="button">Next page! >></a></li>
+						</ul>
+				</footer>
+			
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
