--- a/generic_3.html
+++ b/generic_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>취미#1</title>
+		<title>취미#2</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,36 +44,25 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Hobby[1]-#Baseball</h1>
-										<h2>#취미#야구#KT wiz</h2>
-									</header>	
-									
-									<div class="image-gallery">
-									<p>제가 가장 좋아하는 첫 번째 취미는 야구 경기를 보는 것입니다. 야구장에 직접 가서 보는 것도 좋아하고, 방에서 혼자 방송을 통해 시청하는 것도 좋아합니다. 야구는 저의 삶의 일부가 되어버렸고, 매일 야구 경기가 하기만을 기다리며 오늘은 이길거야 하는 설레는 맘으로 경기를 지켜봅니다. 저는 KBO리그의 KT wiz 팬입니다. 이 팀에 입문한지는 얼마되지는 않았습니다. 저는 경상도 사람이기에 대부분의 사람들은 지역 연고에 따라 NC나 롯데 팀의 팬이라고 생각하시지만, 남들과는 유별나게 Kt의 팬이 되었습니다.</p>
-									<img src="images/kbo.png" alt="kbo" style="width: 20%; max-width: 500px; height: auto;" />
-									</div>
-									<br>
-									<div class="image-gallery">
-									<img src="images/ktwiz.jpg" alt="ktwiz" style="width: 20%; max-width: 500px; height: auto;" />
-									<p>저는 중학교 시절 처음 야구장에 가게 되었고, 그 후 야구에 입문하게 되었습니다. 당시 봤던 경기는 KT:NC였지만, 아버지의 회사를 따라 LG 팀으로 입문하였습니다. 몇 년 간, LG팬으로서 야구를 봐왔지만 그 팀에 정이 붙지 않았었습니다. 고등학교 시절, 항상 하위권을 전전하던 Kt가 떠오르는 다크호스의 팀이 되었고, 강렬했던 첫 직관의 기억이 저의 관심을 끌었습니다. 그 후 우승까지 하며 강팀의 반열에 올랐지만 신생팀이라 팬이 없었고, 그 매력은 홍대병을 가진 저의 마음을 바꾸어 놓았고 완전히 Kt라는 팀으로 빠져들게 되어 팬이 되었습니다. 상경하여, 내 돈으로 수원 kt 홈 구장으로 직관도 가고 선수 유니폼도 사면서 정말 KT의 찐팬이 된 느낌입니다. </p>
-									</div>
-									<br>
-									<p>요즘 야구가 상당히 핫하고 인기 많은 스포츠이면서 취미입니다. 특히나 응원 문화 때문에 더욱 인기가 많아지지 않았나 생각합니다. 저는 사실 꽤나 오래전부터 야구를 봐왔기에 그런지 몰라도 또는 성격 때문인지도 몰라도, 열심히 노래 부르고 율동하면서 응원하는 것보다는 가만히 앉아서 조용히 시청하는 편을 더 선호합니다. 대학 덕분에 서울로 상경하면서 친구들과 야구장을 갈 기회가 많아졌고 직관을 자주 하면서 야구의 새로운 매력을 다시금 느끼고 있습니다.야구라는 취미는 차분히 야구 경기를 틀어 놓고 어떻게 야구 경기가 흘러가는지 보면서 재미를 느낄 수도 있고, 신나는 노래를 들으면서 열심히 율동하며 도파민 충전과 스트레스 해소를 통해서도 즐거움을 느끼실 수 있습니다. 혹시나 이 글을 읽고 계시는 분이 있다면, 삶이 지루하다 느끼실 때 한 번쯤 야구에 입문해보시길 강력하게 추천드립니다. 야구에 빠지시면 같은 팬끼리 대화 주제도 늘고 매일 저녁 뭘 보지 고민할 필요도 없어질 것입니다. 응원하는 팀이 못하면 물론 스트레스 받겠지만 ㅎㅎ, 야구에 빠지면 그를 넘어서는 즐거움이 기다리고 있을 지 모르겠습니다...! </p>
-									<span class="image main"><img src="images/IMG_1201.jpeg" alt="야구장" /></span>
-									</div>
+										<h1>Hobby[2]-#Listening to music</h1>
+										<h2>#취미#음악#감상
+									</header>
+									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+								</div>
 							</section>
 
-							<ul class="actions">
-								<li><a href="generic_4.html" class="button"> << Last page!</a></li>
-							</ul>
-
-							<ul class="actions">
-								<li><a href="generic_4.html" class="button">Next page! >></a></li>
-							</ul>
 					</div>
 
 
 			</div>
+			<footer>
+				<ul class="actions">
+					<li><a href="generic_2.html" class="button"> << Last page!</a></li> <li><a href="generic_3.html" class="button">Next page! >></a></li>
+				</ul>
+		</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
