--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">Here is Home...</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="landing.html" class="button primary fit">Get Started</a></li>
@@ -70,7 +70,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">나의 목표(Goal)</a></h3>
+										<h3><a href="landing.html" class="link">나의 취미(Hobby)[1]</a></h3>
 										<p>목표는 무엇일까요?</p>
 									</header>
 								</article>
@@ -79,7 +79,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">취미(Hobby)[1]</a></h3>
+										<h3><a href="landing.html" class="link">나의 취미(Hobby)[2]</a></h3>
 										<p>나의 첫 번째 취미</p>
 									</header>
 								</article>
@@ -88,7 +88,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">취미(Hobby)[2]</a></h3>
+										<h3><a href="landing.html" class="link">나의 취미(Hobby)[3]</a></h3>
 										<p>나의 두 번째 취미</p>
 									</header>
 								</article>
@@ -131,7 +131,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/qkzudtn?igsh=MTU4OGZ4b3RpamVsMg%3D%3D&utm_source=qr" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
