--- a/generic_1.html
+++ b/generic_1.html
@@ -28,16 +28,16 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Back to Home</a></li>
 							<li><a href="landing.html">Back to landing page</a></li>
+							<li><a href="generic_2.html">next page!</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="generic_2.html" class="button primary fit">next page!</a></li>
+							<li><a href="index.html" class="button primary fit">Back to Home</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
-					<div id="main" class="alt">
+					<div id="main" class="alt1">
 
 						<!-- One -->
 							<section id="one">
@@ -47,7 +47,7 @@
 									</header>
 									<article class="image-gallery">
 										<section>
-										<img src="images/IMG_0318.jpeg" alt="" style="width: 80%; max-width: 500px; height: auto;"/>
+										<img src="images/IMG_0318.jpeg" alt="" style="width: 80%; max-width: 600px; height: auto;"/>
 										</section>
 											<aside>
 										<p>
@@ -65,19 +65,17 @@
 										</aside>
 									</article>
 									<article>
-										<section><img src="images/IMG_1400.jpg" alt="" style="width: 28%; max-width: 500px; height: auto; float: right; margin-left: 20px;"/>
+										<section><img src="images/IMG_1400.jpg" alt="" style="width: 30%; max-width: 500px; height: auto; float: right; margin-left: 20px;"/>
 										</section>
+										
 										</article>
-							</section>
-
+							</section><br><br><br><br><br><br><br><br>
+							<ul class="actions">
+								<li><a href="landing.html" class="button"> << back...!</a></li> <li><a href="generic_2.html" class="button">Next page! >></a></li>
+							</ul>
 					</div>
+					
 					</div>
-
-					<footer><br><br><br><br><br><br><br><br>
-						<ul class="actions">
-							<li><a href="landing.html" class="button"> << Back...!</a></li> <li><a href="generic_2.html" class="button">Next page! >></a></li>
-						</ul>
-				</footer>
 			
 
 		<!-- Scripts -->
