--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">소개(Introduction)</a></h3>
-										<p>나의 삶을 소개합니다!</p>
+										<p>저의 삶을 소개합니다!</p>
 									</header>
 								</article>
 								<article>
@@ -71,7 +71,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">나의 취미(Hobby)[1]</a></h3>
-										<p>목표는 무엇일까요?</p>
+										<p>저의 첫 번째 취미를 소개합니다!</p>
 									</header>
 								</article>
 								<article>
@@ -80,7 +80,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">나의 취미(Hobby)[2]</a></h3>
-										<p>나의 첫 번째 취미</p>
+										<p>저의 두 번째 취미를 소개합니다!</p>
 									</header>
 								</article>
 								<article>
@@ -89,7 +89,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">나의 취미(Hobby)[3]</a></h3>
-										<p>나의 두 번째 취미</p>
+										<p>저의 세 번째 취미를 소개합니다!</p>
 									</header>
 								</article>
 								
@@ -132,6 +132,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/qkzudtn?igsh=MTU4OGZ4b3RpamVsMg%3D%3D&utm_source=qr" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><p> << instagram</p></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
