--- a/landing.html
+++ b/landing.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Chungang</strong> <span>by park</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -45,7 +45,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="images/pic07.jpg" alt=""  />
 							</span>
 							<header class="major">
 								<h1>Who is him?</h1>
@@ -69,7 +69,8 @@
 									<header class="major">
 										<h2>He is...</h2>
 									</header>
-									<p>네 영역으로 나누어 저에 대해 소개하겠습니다! 차례대로 잘 따라오세요! <br/>
+									<p>네 영역으로 나누어 저에 대해 소개하겠습니다! 차례대로 잘 따라오세요!
+									<br>
 									Let me introduce myself in four sections! Follow me in order!</p>
 								</div>
 							</section>
@@ -78,12 +79,12 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic_1.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/IMG_5118.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Park's life</h3>
+												<h3>Who's Park?</h3>
 											</header>
 											<p>우선, 제가 어떤 사람인지 소개하겠습니다!<br>
 												First, let me introduce who i am!
@@ -96,15 +97,15 @@
 								</section>
 								<section>
 									<a href="generic_2.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/motcham.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Park's hobby[1]</h3>
 											</header>
-											<p>다음으로, 저의 첫 번째 취미에 대해 소개하겠습니다!<br>
-												Next, et me introduce my first hobby!
+											<p>다음으로, 저의 첫 번째 취미에 대해 소개하겠습니다! <br>(어떤 취미를 갖고 있을까요?)<br>
+												Next, et me introduce my first hobby! 
 											</p>
 											<ul class="actions">
 												<li><a href="generic_2.html" class="button">Follow me</a></li>
@@ -114,14 +115,15 @@
 								</section>
 								<section>
 									<a href="generic_3.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+										<img src="images/IMG_5136.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Park's hobby[2]</h3>
 											</header>
-											<p>그 다음으로, 저의 두 번째 취미에 대해 소개하겠습니다!<br>
+											<p>그 다음으로, 저의 또 다른 두 번째 취미에 대해 소개하겠습니다! <br>(취미가 많네요!)
+												<br>
 												Then, let me introduce my second hobby!
 											</p>
 											<ul class="actions">
@@ -132,14 +134,14 @@
 								</section>
 								<section>
 									<a href="generic_4.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/IMG_4300.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Park's hobby[3]</h3>
 											</header>
-											<p>마지막으로, 저의 세 번째 취미에 대해 소개하겠습니다!<br>
+											<p>마지막으로, 저의 세 번째 취미에 대해 소개하겠습니다! <br>(취미 맞죠...?)<br>
 												Lastly, let me introdue my third hobby!
 											</p>
 											<ul class="actions">
