--- a/generic_1.html
+++ b/generic_1.html
@@ -50,7 +50,7 @@
 										<img src="images/IMG_0318.jpeg" alt="" style="width: 80%; max-width: 600px; height: auto;"/>
 										</section>
 											<aside>
-										<p>
+										<blockquote>
 											<strong style="font-size: 1.2em;">안녕하세요! 저는 23학번 산업보안학과 박형수입니다!</strong> <br><br><br>
 											<strong style="font-size: 1.1em;">출생지</strong> : 경상남도 진주시 <br>
 											<strong style="font-size: 1.1em;">현 주거지</strong> : 남명학사(서울시 강남구 자곡동)<br>
@@ -61,7 +61,7 @@
 											<strong style="font-size: 1.1em;">삶의 좌우명</strong> : 내가 싫은 짓은 남한테 하지 말자., 최소한만 후회하자. <br>
 											<strong style="font-size: 1.1em;">삶의 목표</strong> : 꿈은 딱히 없음. 돈 많은 백수면 좋겠지만, 큰 목표도 없음.<br>
 											<strong style="font-size: 1.1em;">최우선 목표</strong> : 마냥 흘러가는 대로 살지 않고, 내가 진정 하고 싶은 일을 찾는 것 
-										</p>
+										</blockquote>
 										</aside>
 									</article>
 									<article>
@@ -69,9 +69,14 @@
 										</section>
 										
 										</article>
-							</section><br><br><br><br><br><br><br><br>
-							<ul class="actions">
-								<li><a href="landing.html" class="button"> << back...!</a></li> <li><a href="generic_2.html" class="button">Next page! >></a></li>
+							</section><div style="margin-bottom: 260px;"></div>
+							<center><ul class="pagination">
+								<li><span class="button small disabled">Prev</span></li>
+								<li><a href="generic_1.html" class="page active">1</a></li>
+								<li><a href="generic_2.html" class="page">2</a></li>
+								<li><a href="generic_3.html" class="page">3</a></li>
+								<li><a href="generic_4.html" class="page">4</a></li>
+								<li><a href="generic_2.html" class="button small">Next</a></li>
 							</ul>
 					</div>
 					
