--- a/generic_4.html
+++ b/generic_4.html
@@ -71,10 +71,15 @@
 									<p>여행을 좋아하게 된 계기가 이집트라는 엄청난 곳이었기에 유난히 감명 깊은 것일 수 있다고 어느정도 생각은 합니다만, 여행은 귀찮고 힘들거지만 시도해보면 그 이상의 가치와 추억을 가질 수 있는 것이라 생각합니다. 저야 뭐 여행에 대해서 아무것도 모를 때라서, 무지하기에 겁 없고 용감하게 시도했던 것 같습니다. 다시 간다고 생각하면 사실 좀 아찔하다라는 생각도 들긴 합니다. 그럼에도 불구하고, 여행을 떠올리면서 가기를 망설이는 분이 있다면 두려운 마음을 머릿속에서 지우고 용기내서 심플한 마음가짐으로 한 번쯤 도전해보셨으면 좋겠습니다!</p>
 									</div>
 								
-							</section>
+							</section><div style="margin-bottom: 50px;"></div>
 							<div>
-								<ul class="actions">
-									<li><a href="generic_3.html" class="button"> << Last page!</a></li> <li><a href="index.html" class="button">Home!</a></li>
+								<center><ul class="pagination">
+									<li><a href="generic_3.html" class="button small">prev</a></li>
+									<li><a href="generic_1.html" class="page">1</a></li>
+									<li><a href="generic_2.html" class="page">2</a></li>
+									<li><a href="generic_3.html" class="page">3</a></li>
+									<li><a href="generic_4.html" class="page active">4</a></li>
+									<li><span class="button small disabled">next</span></li>
 								</ul>
 							</div>
 						</div>
