--- a/generic_2.html
+++ b/generic_2.html
@@ -67,9 +67,14 @@
 									</div>
 									</div>
 									
-							</section>
-							<ul class="actions">
-								<li><a href="generic_1.html" class="button"> << Last page!</a></li> <li><a href="generic_3.html" class="button">Next page! >></a></li>
+							</section><div style="margin-bottom: 80px;"></div>
+							<center><ul class="pagination">
+								<li><a href="generic_1.html" class="button small">prev</a></li>
+								<li><a href="generic_1.html" class="page">1</a></li>
+								<li><a href="generic_2.html" class="page active">2</a></li>
+								<li><a href="generic_3.html" class="page">3</a></li>
+								<li><a href="generic_4.html" class="page">4</a></li>
+								<li><a href="generic_4.html" class="button small">next</a></li>
 							</ul>
 							</div>
 			</div>
