--- a/landing.html
+++ b/landing.html
@@ -79,7 +79,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic_1.html" class="image">
-										<img src="images/IMG_5118.jpg" alt="" data-position="center center" />
+										<img src="./images/IMG_5118.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
