--- a/generic_1.html
+++ b/generic_1.html
@@ -47,7 +47,7 @@
 									</header>
 									<article class="image-gallery">
 										<section>
-										<img src="images/IMG_0318.jpeg" alt="" style="width: 80%; max-width: 600px; height: auto;"/>
+										<img src="images/me.jpeg" alt="" style="width: 80%; max-width: 600px; height: auto;"/>
 										</section>
 											<aside>
 										<blockquote>
@@ -65,7 +65,7 @@
 										</aside>
 									</article>
 									<article>
-										<section><img src="images/IMG_1400.jpg" alt="" style="width: 30%; max-width: 500px; height: auto; float: right; margin-left: 20px;"/>
+										<section><img src="images/nol.jpg" alt="" style="width: 30%; max-width: 500px; height: auto; float: right; margin-left: 20px;"/>
 										</section>
 										
 										</article>
