--- a/landing.html
+++ b/landing.html
@@ -79,7 +79,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic_1.html" class="image">
-										<img src="./images/IMG_5118.jpg" alt="" data-position="center center" />
+										<img src="images/intro.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -115,7 +115,7 @@
 								</section>
 								<section>
 									<a href="generic_3.html" class="image">
-										<img src="images/IMG_5136.jpg" alt="" data-position="25% 25%" />
+										<img src="images/dungsil.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -134,7 +134,7 @@
 								</section>
 								<section>
 									<a href="generic_4.html" class="image">
-										<img src="images/IMG_4300.jpg" alt="" data-position="top center" />
+										<img src="images/meot.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
