--- a/generic_2.html
+++ b/generic_2.html
@@ -58,12 +58,12 @@
 									<p>저는 중학교 시절 처음 야구장에 가게 되었고, 그 후 야구에 입문하게 되었습니다. 당시 봤던 경기는 KT:NC였지만, 아버지를 따라 LG 팀으로 입문하였습니다. 몇 년 간, LG팬으로서 야구를 봐왔지만 그 팀에 정이 붙지 않았었습니다. 고등학교 시절, 항상 하위권을 전전하던 Kt가 떠오르는 다크호스의 팀이 되었고, 강렬했던 첫 직관의 기억이 저의 관심을 끌었습니다. 그 후 우승까지 하며 강팀의 반열에 올랐지만 신생팀이라 팬이 없었는데, 그 매력은 홍대병을 가진 저의 마음을 당겼고, Kt wiz의 팬이 되었습니다. 상경하여, 제 돈으로 수원 kt 홈 구장으로 직관도 가고 선수 유니폼도 사면서 정말 KT의 찐팬이 된 느낌입니다. </p>
 									</div>
 									<div style="display: flex; justify-content: center; align-items: center;">
-										<img src="images/IMG_4302.jpg" alt="" style="width: 330px; height: auto;" />
+										<img src="images/sip.jpg" alt="" style="width: 330px; height: auto;" />
 									</div>
 									<br>
 									<p>요즘 야구가 상당히 핫하고 인기 많은 스포츠이자 취미입니다. 특히나 응원 문화 때문에 더욱 인기가 많아지지 않았나 생각합니다. 그치만 저는 열심히 노래 부르고 율동하면서 응원하는 것보다는 가만히 앉아서 조용히 시청하는 편을 더 선호합니다. 서울로 상경하면서 친구들과 야구장을 갈 기회가 많아졌고 직관을 자주 하면서 야구의 새로운 매력을 다시금 느끼고 있습니다. 야구라는 취미는 차분히 야구 경기를 틀어 놓고 어떻게 야구 경기가 흘러가는지 보면서 재미를 느낄 수도 있고, 신나는 노래를 들으면서 열심히 율동하며 도파민 충전과 스트레스 해소를 통해서도 즐거움을 느끼실 수 있습니다. 혹시나 이 글을 읽고 계시는 분이 있다면, 삶이 지루하다 느끼실 때 한 번쯤 야구에 입문해보시길 추천드립니다. 야구에 빠지시면 같은 팬끼리 대화 주제도 생기고 매일 저녁 뭘 보지 고민할 필요도 없어질 것입니다. 응원하는 팀이 못하면 물론 스트레스 받겠지만..., 야구에 빠지면 그를 넘어서는 즐거움이 기다리고 있을 지 모르겠습니다...! </p>
 									<div style="display: flex; justify-content: center; align-items: center;">
-										<img src="images/IMG_1201.jpeg" alt="" style="width: 600px; height: auto;" />
+										<img src="images/ba.jpeg" alt="" style="width: 600px; height: auto;" />
 									</div>
 									</div>
 									
