--- a/generic_3.html
+++ b/generic_3.html
@@ -49,7 +49,7 @@
 									</header>	
 									
 									<div style="display: flex; justify-content: center; align-items: center;">
-										<img src="images/IMG_5164.jpg" alt="" style="width: 400px; height: auto; margin-right: 20px;" />
+										<img src="images/mu.jpg" alt="" style="width: 400px; height: auto; margin-right: 20px;" />
 										<img src="images/listen.gif" alt="" style="width: 400px; height: auto;" />
 									  </div>
 									  
