--- a/landing.html
+++ b/landing.html
@@ -115,7 +115,7 @@
 								</section>
 								<section>
 									<a href="generic_3.html" class="image">
-										<img src="https://back02.github.io/ComputerNetwork/intr/images/dungsil.jpg" alt="" data-position="25% 25%" />
+										<img src="images/dungsil.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
